# tradie-bot

./: .env.example  .gitignore  CLAUDE.md  Overview.md  README.md  build.gradle  gradle.properties  more-context-from-claude-web-chat.txt  settings.gradle  tradie-implementation-guide.md
.github/: CODEOWNERS
.github/workflows/: docker-ci.yml  java-ci.yml  python-ci.yml
alert-service/: build.gradle
alert-service/src/main/resources/: application.properties
api-gateway/: build.gradle
api-gateway/src/main/resources/: application.properties
common/: build.gradle
infrastructure/: docker-compose.yml
infrastructure/db/: init.sql
news-shield/: Dockerfile  pyproject.toml
news-shield/src/: config.py  main.py
news-shield/src/routers/: events.py  market_status.py  sentiment.py
news-shield/src/services/: event_calendar.py  sentiment_analyzer.py
news-shield/tests/: test_event_calendar.py  test_main.py  test_market_status.py  test_sentiment_analyzer.py
order-executor/src/main/resources/: application.properties
scripts/pinescript/: tradie_breaker_blocks.pine  tradie_candlestick_patterns.pine  tradie_confluence.pine  tradie_divergence.pine  tradie_fibonacci.pine  tradie_fvg_detector.pine  tradie_ichimoku.pine  tradie_liquidity_sweeps.pine  tradie_market_structure.pine  tradie_order_blocks.pine  tradie_pivot_points.pine  tradie_sessions.pine  tradie_supply_demand.pine  tradie_volatility.pine  tradie_volume.pine  tradie_vwap.pine
strategy-engine/: build.gradle
strategy-engine/src/main/resources/: application.properties
(+47 files in other folders)
